--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Markdown dump
 description: Enkele gedeelde teksten. Zonder garantie.
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
